<resources>
    <!-- General -->
    <string name="app_name">Argos</string>

    <!-- Sticky Notification -->
    <string name="notification_title">Participando en el experimiento</string>
    <string name="notification_message">Estamos captando información de los sensores de tu móvil. Gracias por ayudarnos.</string>

    <!-- Required permissions -->
    <string name="required_permissions_title">Para empezar</string>
    <string name="required_permissions_message">Necesitamos que aceptes una serie de permisos para poder captar información de los sensores de tu móvil.</string>
    <string name="required_permissions_recheck">Activar permisos</string>

    <!-- Questions views -->
    <string name="multi_questions_title">¿En qué andas?</string>
    <string name="question_advertisement">Estamos captando información de los sensores de tu móvil para intentar interpretar en qué fase del día estás.</string>
    <string name="success_answer_title">Gracias</string>
    <string name="success_answer_message">Tus respuestas nos ayudan a interpretar mejor la fase en la que te encuentras.</string>
    <string name="back_to_questions">Volver a contestar</string>

    <!-- User journey states -->
    <string name="status_work">Trabajando</string>
    <string name="status_still">En un descanso</string>
    <string name="status_transit">En trayecto</string>
    <string name="status_personal">Vida privada</string>

    <!-- Incognito mode -->
    <string name="incognito_mode_banner_text_enable">Modo incógnito activado</string>
    <string name="incognito_mode_banner_text_disable">Activar el modo incógnito</string>
    <string name="incognito_mode_title">Estaremos vegetando hasta las</string>
    <string name="incognito_mode_advertisement">Durante el modo incógnito no captamos ningún tipo de información. Volverá a activarse en el plazo de 8h.</string>

    <!-- Info -->
    <string name="info_title1">¿Qué es Argos?</string>
    <string name="info_paragraph1">Es la aplicación que desde el Lab de Innovación de BBVA Next hemos creado para <b>entender y explorar el modelado de contexto</b> en nuestra investigación sobre <b>sistemas omnicanales.</b></string>
    <string name="info_paragraph2">Estamos leyendo y guardando datos que se captan a través de los sensores de tu móvil. </string>
    <string name="info_paragraph3">Y <b>todo esto para intentar interpretar si estás en alguna de estas fases</b>: trabajando, en un descanso, en el trayecto al o desde el trabajo o en tu vida privada. </string>
    <string name="info_paragraph4">Échale un ojo a nuestro repositorio en GitHub si te interesa saber más.</string>
    <string name="info_title2">¿Qué datos se recogen?</string>
    <string-array name="info_data_entities">
        <item>Red wifi a la que el dispositivo esté conectado</item>
        <item>Redes wifis disponibles</item>
        <item>Localización gps</item>
        <item>Aplicaciones utilizadas en el último minuto</item>
        <item>Dispositivos bluetooth cercanos</item>
        <item>Dispositivo bluetooth conectado</item>
        <item>Nivel de batería</item>
        <item>Datos del podómetro (caminando, en vehículo...)</item>
        <item>Tipo de conexión (wifi, red móvil...)</item>
        <item>Momento del día, facilitado proactivamente por el usuario</item>
    </string-array>
    <string name="info_device_id_label">Nº identificador asignado:</string>
    <string name="info_paragraph5">Todos estos datos se asociarán a un identificador único y universal (UUID) para tu dispositivo, por lo que en ningún momento almacenaremos ningún dato que de forma directa pueda relacionar los datos con una persona concreta.</string>
    <string name="info_title3">¿Cómo funciona el modo incógnito?</string>
    <string name="info_paragraph6">Es una forma de <b>parar el experimento de forma temporal</b>. Durante el tiempo que esté activado, no tomaremos ningún tipo de de dato.</string>
    <string name="info_paragraph7"><b>Si lo que quieres es dejar de participar</b> en el experimento <b>de forma permanente</b>, danos un toque para sacarte del experimento.</string>
    <string name="info_paragraph8">Necesitaremos que nos facilites tu identificador único para poder borrar tus datos en caso de que lo solicites.</string>
    <string name="info_contact_button">Contactar</string>
    <string name="info_contact_dialog">Envíanos un correo</string>
</resources>
