<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/ic_img_question_state_danger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_permissions_title"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="20dp"
            android:textFontWeight="600"
            android:textAlignment="center"
            android:textColor="@color/colorDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_permissions_message"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="24dp"
            android:textAlignment="center"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/check_permissions_again"
            android:layout_width="244dp"
            android:layout_height="36dp"
            android:layout_marginVertical="6dp"
            android:text="@string/required_permissions_recheck"
            style="@style/AppTheme.LinkButton"/>

    </LinearLayout>
</LinearLayout>